fix: add z-index to hamburger menu and add style to first paragraf of main

--- a/docs/style.css
+++ b/docs/style.css
@@ -575,9 +575,36 @@ video {
   right: 0px;
 }
 
+.z-10{
+  z-index: 10;
+}
+
+.m-6{
+  margin: 1.5rem;
+}
+
+.m-10{
+  margin: 2.5rem;
+}
+
 .my-4{
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.mx-6{
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+.my-6{
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.my-10{
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
 }
 
 .mr-8{
@@ -638,6 +665,10 @@ video {
 
 .mb-4{
   margin-bottom: 1rem;
+}
+
+.mt-1{
+  margin-top: 0.25rem;
 }
 
 .flex{
@@ -714,6 +745,30 @@ video {
 
 .w-\[162px\]{
   width: 162px;
+}
+
+.w-\[\]{
+  width: ;
+}
+
+.w-\[2\]{
+  width: 2;
+}
+
+.w-\[21\]{
+  width: 21;
+}
+
+.w-\[217\]{
+  width: 217;
+}
+
+.w-\[217p\]{
+  width: 217p;
+}
+
+.w-\[217px\]{
+  width: 217px;
 }
 
 .list-disc{
@@ -883,6 +938,31 @@ video {
   padding-bottom: 1.5rem;
 }
 
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-14{
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-3\.5{
+  padding-top: 0.875rem;
+  padding-bottom: 0.875rem;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .pt-20{
   padding-top: 5rem;
 }
@@ -931,6 +1011,10 @@ video {
   font-style: normal;
 }
 
+.leading-6{
+  line-height: 1.5rem;
+}
+
 .text-green-700{
   --tw-text-opacity: 1;
   color: rgb(21 128 61 / var(--tw-text-opacity));
@@ -959,6 +1043,11 @@ video {
 .text-gray-600{
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .underline{
